# tbank2qif

./: LICENSE  README.md  pyproject.toml
data/Input/: category.csv  operations.csv
data/Output/: import.qif  new_categories.csv  quicken.csv
examples/: category.sample.csv  operations.sample.csv
src/tbank2qif/: __init__.py  cli.py  core.py  writers.py
tests/: test_cli.py
