[project]
name = "tbank2qif"
version = "0.2.0"
description = "TBank CSV → Quicken QIF/CSV converter (CLI + batch)"
requires-python = ">=3.9"
readme = "README.md"
authors = [{name="Dmitry Efremov"}]

[project.scripts]
tbank2qif = "tbank2qif.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
